# CryptoPulse-Cryptocurrency-Backtesting-Platform

./: .clang-format  .clang-tidy  .codespellrc  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .license.tmpl  .yamllint  BacktesterDoxyFile  Makefile  README.md  backtest_executable  latency_executable  pyproject.toml  run_backtest.sh  run_latency_analysis.sh
configuration/: exchange.json
docs/: api.md  documentation.md  environment_setup.md  final_report.md  project_proposal.md
include/: main.h
include/backtesting/: OrderBook.h  backtester.h  order.h  strategy.h  trade.h  user.h
include/data/: eventmsg.h  exchange.h  security.h  timetype.h  util.h
include/record/: orderlog.h  tradelog.h
patches/clang-format/: adjust_header_regroup_logic.patch  support_block_indent_for_braced_init.patch  support_block_indent_for_template_closer.patch
sample_data/: sample_latency_analysis.csv  sample_tradelog.csv
scripts/: fork.sh
scripts/cicd/: build_sphinx_docs.py  remove_old_pipelines.py
scripts/cicd/helpers/: build_cpp.ps1  test_cpp.ps1
scripts/cicd/lint/: check_commit_messages.sh  check_cpp_conventions.sh  check_cpp_files_formatting.sh  check_cpp_include_guards.sh  check_cpp_iostream.sh  check_license_headers.sh  check_python_conventions.sh  check_python_files_formatting.sh  check_python_imports.sh  check_shell_conventions.sh  check_shell_files_formatting.sh  check_yaml_files_formatting.sh  filter_files.sh  find_typos.sh
scripts/os/: install_files.sh  setup_ubuntu2004.sh
src/: backtest.cpp  backtest.py  latency_analysis.cpp  latency_analysis.py  sample_strategy.h
tests/exchange_json_test/: binance.json
tests/unit_tests/: order_unit_test.cpp  order_unittest.cpp
